# multi-files-processor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yaml
mfp-cli/: Cargo.toml
mfp-cli/src/: args.rs  error.rs  format.rs  main.rs
mfp-lib/: Cargo.toml
mfp-lib/src/: error.rs  lib.rs  processor.rs  types.rs  utils.rs
mfp-lib/tests/: mod.rs
mfp-lib/tests/files/: initial_1.txt  initial_2.txt  larger_spaces.txt  longer.txt  unicode.txt
