[workspace]
resolver = "2"
members = [
    "mfp-lib",
    "mfp-cli",
]

[workspace.dependencies]
clap = { version = "4.5.27", features = ["derive"] }
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tempfile = "3.16.0"
thiserror = "2.0.11"
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
