[package]
name = "mfp-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mfp-cli"
path = "src/main.rs"

[dependencies]
# internal
mfp-lib = { path = "../mfp-lib" }

clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true 
tracing.workspace = true
tracing-subscriber.workspace = true