[package]
name = "mfp-lib"
version = "0.1.0"
edition = "2021"
authors = ["Léa Narzis"]
description = "A concurrent text file processor library"

[lib]
name = "mfp_lib"
path = "src/lib.rs"

[dependencies]
futures.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true